crates/weft-snapshots/tests/snapshots/lit-js/example-menu.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-menu as lit-js
---
import { LitElement, html } from "lit";

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="root" aria-label="Document"
      ><div data-weft-id="actions" aria-label="Document actions" role="menu"
        ><button data-weft-id="rename" type="button" role="menuitem" @click=${() => _act(actions, { id: "rename", action: "doc.rename" })}>Rename</button
        ><button data-weft-id="delete" type="button" role="menuitem" @click=${() => _act(actions, { id: "delete", action: "doc.delete" })}>Delete</button
      ></div
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
