crates/weft-snapshots/tests/snapshots/lit-js/example-model.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-model as lit-js
---
import { LitElement, html } from "lit";

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="root" aria-label="Showroom"
      ><model-viewer data-weft-id="chair" aria-label="A wooden armchair" role="img" alt="A wooden armchair" src="assets/chair.glb" ios-src="assets/chair.usdz" camera-controls="" interaction-prompt="none"
        ><img slot="poster" alt="" src="assets/chair.png"
      ></model-viewer
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
