crates/weft-snapshots/tests/snapshots/lit-js/example-option.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-option as lit-js
---
import { LitElement, html } from "lit";

function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _list(v) {
  return Array.isArray(v) ? v : [];
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="root" aria-label="Sizes"
      ><label
        ><span aria-hidden="true">Size</span>${(() => {
          const _o = [
            ..._list(data?.sizes).flatMap((size, _i0) => [
              { value: size?.code, el: html`<option data-weft-id=${"size-option[" + _i0 + "]"} ?selected=${_text(size?.code) === _text(data?.size)} .value=${_text(size?.code)}>Size</option>` },
            ]),
            { value: "other", el: html`<option data-weft-id="size-other" ?selected=${"other" === _text(data?.size)} value="other">Other</option>` },
          ];
          return html`<select data-weft-id="size" aria-label="Size" .value=${_text(data?.size)} @change=${(_e) => { const _c = _o.find((_x) => _text(_x.value) === _e.currentTarget.value); onChange?.("$.size", _c ? _c.value : _e.currentTarget.value); }}>${_o.map((_x) => _x.el)}</select>`;
        })()}</label
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
