crates/weft-snapshots/tests/snapshots/lit-js/example-radio.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-radio as lit-js
---
import { LitElement, html } from "lit";

function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _on(v) {
  return v === "false" ? false : Boolean(v);
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="root" aria-label="Delivery"
      ><div data-weft-id="speed" aria-label="Delivery speed" role="radiogroup"
        ><span aria-hidden="true">Delivery speed</span
        ><label
          ><input data-weft-id="speed-std" type="radio" name=${"weft-speed"} value="standard" aria-label="Standard" .checked=${_text(data?.speed) !== "" && "standard" === _text(data?.speed)} @change=${() => onChange?.("$.speed", "standard")}
          ><span aria-hidden="true">Standard</span
        ></label
        ><label
          ><input data-weft-id="speed-fast" type="radio" name=${"weft-speed"} value="express" aria-label="Express" ?disabled=${!_on(data?.expressAvailable)} .checked=${_text(data?.speed) !== "" && "express" === _text(data?.speed)} @change=${() => onChange?.("$.speed", "express")}
          ><span aria-hidden="true">Express</span
        ></label
      ></div
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
