crates/weft-snapshots/tests/snapshots/lit-js/example-row.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-row as lit-js
---
import { LitElement, html } from "lit";

function _on(v) {
  return v === "false" ? false : Boolean(v);
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _press(e, fire) {
  if (e.target !== e.currentTarget || (e.key !== "Enter" && e.key !== " ")) return;
  e.preventDefault();
  fire();
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="root" aria-label="Users">${(() => {
        const _cols = [
          html`<th data-weft-id="col-name" scope="col">Name</th>`,
        ];
        const _rows = [
          html`<tr data-weft-id="row-ana" aria-selected=${String(_on(data?.anaSelected))} tabindex=${0} @click=${() => _act(actions, { id: "row-ana", action: "users.select" })} @keydown=${(_e) => _press(_e, () => _act(actions, { id: "row-ana", action: "users.select" }))}
              ><td data-weft-id="cell-ana">Ana</td
            ></tr>`,
        ];
        return html`<table data-weft-id="users" aria-label="Users">${_cols.length > 0 ? html`<thead
                ><tr>${_cols}</tr
              ></thead>` : null}${_rows.length > 0 ? html`<tbody>${_rows}</tbody>` : null}</table>`;
      })()}</main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
