crates/weft-snapshots/tests/snapshots/lit-js/example-segment.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-segment as lit-js
---
import { LitElement, html } from "lit";

function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="root" aria-label="Sort"
      ><div data-weft-id="order" aria-label="Order" role="radiogroup" data-weft-segmented=""
        ><span aria-hidden="true">Order</span
        ><label
          ><input data-weft-id="order-new" type="radio" name=${"weft-order"} value="new" aria-label="Newest" .checked=${_text(data?.order) !== "" && "new" === _text(data?.order)} @change=${() => onChange?.("$.order", "new")}
          ><span aria-hidden="true">Newest</span
        ></label
        ><label
          ><input data-weft-id="order-top" type="radio" name=${"weft-order"} value="top" aria-label="Top" .checked=${_text(data?.order) !== "" && "top" === _text(data?.order)} @change=${() => onChange?.("$.order", "top")}
          ><span aria-hidden="true">Top</span
        ></label
      ></div
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
